Bug 123779 - KDE: Tooltip when entering a formula in cell hides cell
Summary: KDE: Tooltip when entering a formula in cell hides cell
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
: 125944 (view as bug list)
Depends on:
Blocks: KDE Tooltip
  Show dependency treegraph
 
Reported: 2019-03-01 07:42 UTC by Roman Kuznetsov
Modified: 2022-10-29 07:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Comparison between Win GTK3 and KDE (250.97 KB, image/png)
2019-03-01 07:43 UTC, Roman Kuznetsov
Details
tip on "formula bar" for "formula making" is displaying over the formula itself. (77.61 KB, image/jpeg)
2022-10-21 10:15 UTC, elias estatistics
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-03-01 07:42:40 UTC
Description:
KDE: Tooltip when entering a formula in cell hides cell

See attachs

Steps to Reproduce:
1. Open Calc
2. Start to enter in to cell a formula like =sum(
3. Look at tooltip (see attach)

Actual Results:
Tooltip hides cell

Expected Results:
Tooltip is below of cell


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2019-03-01 07:43:33 UTC
Created attachment 149670 [details]
Comparison between Win GTK3 and KDE
Comment 2 Vera Blagoveschenskaya 2019-03-01 07:47:24 UTC
Confirmed from my side

Version: 6.3.0.0.alpha0+
Build ID: 5413c8871dec08eff19f514f5f391b946a45c86c
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-02-27_23:42:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Jan-Marek Glogowski 2019-06-18 09:54:23 UTC
*** Bug 125944 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2019-06-22 14:23:31 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/337b592a721bef2c54cbe8c4927e5cc5a68c2138%5E%21

tdf#123779 Qt5 correctly fill Qt5Frame::maGeometry

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Callegar 2019-06-22 14:37:08 UTC
While there is no popover in current Qt, it looks like there are some out-of-tree solutions to get nice looking pop overs in Qt5. For instance, https://github.com/sharkpp/qtpopover.
I wonder if similar code could be included in LibO.
Comment 6 Commit Notification 2019-06-22 18:02:59 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/dd0bca3ac7ad2e498ba420718df703f651efdc21%5E%21

tdf#123779 Qt5 correctly fill Qt5Frame::maGeometry

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Weghorn 2019-06-22 19:09:32 UTC
Verified with

Version: 6.4.0.0.alpha0+
Build ID: a2dad3e10ada8adcc9b5bdb60d3d516e33aa3f07
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 8 elias estatistics 2022-10-21 10:15:29 UTC
Created attachment 183186 [details]
tip on "formula bar" for "formula making" is displaying over the formula itself.

for 7.5.00
tip on "formula bar" for "formula making" is displaying over the formula itself when autoinput is selected.

Expected: 
Tooltip for formula making to not be displayed over the formula itself.
Comment 9 Michael Weghorn 2022-10-29 07:36:34 UTC
(In reply to elias estatistics from comment #8)
> Created attachment 183186 [details]
> tip on "formula bar" for "formula making" is displaying over the formula
> itself.
> 
> for 7.5.00
> tip on "formula bar" for "formula making" is displaying over the formula
> itself when autoinput is selected.
> 
> Expected: 
> Tooltip for formula making to not be displayed over the formula itself.

There's bug 151677 for that.