tdf#123779 Qt5 correctly fill Qt5Frame::maGeometry

The tooltip in the bug is actually not one, but the VCL implementation
of Gtk's popover widget triggered by SalFrame::ShowPopover. This has
no Qt equivalent, so we currently rely on the crude VCL version.

But for this maGeometry must contain the correct information, AKA the
absolute, unmirrored, paintable system geometry of the frame. Then the
window can be positioned correctly.

The patch gets rid of most of the code initially copied from gtk, when
this VCL backend was in a very early state.

Change-Id: Id44e4dc2aac41f1f01d51c4d8107892e644ef243